# c_web_server

./: .gitignore  CMakeLists.txt  README.md  cache.c  cache.h  channel.c  channel.h  client.c  errorHandling.c  errorHandling.h  http.c  http.h  httpHeaders.c  httpHeaders.h  httpRequest.c  httpRequest.h  httpWorkerThread.c  httpWorkerThread.h  input.c  input.h  loggerWorkerThread.c  loggerWorkerThread.h  mimeTypes.c  mimeTypes.h  php.c  php.h  response.c  response.h  result.h  server.c  settings.txt  string.c  string.h  uri.c  uri.h  workerThread.c  workerThread.h
Webroot/: ActivityDiagram.html  Conclusion.html  DataDictionary.html  DataflowDiagrams.html  ExecutiveSummary.html  FutureSystemsDFD.html  Introduction.html  PhysicalDataflowDiagrams.html  StructureCharts.html  SystemDecomposition.html  SystemDescription.html  UMLClassDiagrams.html  UseCaseDiagrams.html  error.html  index.html
Webroot/styles/: alignment.css
